Add basic paragraph text

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <h1>Landing Page</h1>
-    <script type="module" src="index.js"></script>
+    <h1>Spicy Tomatoes</h1>
+    <p>Spicy Tomatoes is an American review-aggregation website for film and television. The company was launched in March 2022 by two undergraduate students at the Georgia Institute of Technology: Deepak Ramalingam and Stephen Buckley.</p>
 </body>
 
 </html>
