Add tomato image

--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 
 <head>
+    <!-- Title of Webpage (appears in tab name) -->
     <title>Spicy Tomatoes</title>
-    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <h1>Spicy Tomatoes</h1>
+    <!-- Navbar -->
+    <div>
+        <img width="50px" height="50px" src="https://d35lsekltq0ycz.cloudfront.net/web-arcade/tomato.png"/>
+        <h1>Spicy Tomatoes</h1>
+    </div>
+    <!-- Description -->
     <p>Spicy Tomatoes is an American review-aggregation website for film and television. The company was launched in March 2022 by two undergraduate students at the Georgia Institute of Technology: Deepak Ramalingam and Stephen Buckley.</p>
+    <!-- Continue to Ratings Page Button -->
+    <a href="/ratings">Continue</a>
 </body>
 
 </html>
