HTML to define elements on page

--- a/index.html
+++ b/index.html
@@ -9,13 +9,29 @@
 <body>
     <!-- Navbar -->
     <div>
-        <img width="50px" height="50px" src="https://d35lsekltq0ycz.cloudfront.net/web-arcade/tomato.png"/>
+        <img width="50px" height="50px" src="https://d35lsekltq0ycz.cloudfront.net/web-arcade/tomato-transparent.png"/>
         <h1>Spicy Tomatoes</h1>
     </div>
-    <!-- Description -->
-    <p>Spicy Tomatoes is an American review-aggregation website for film and television. The company was launched in March 2022 by two undergraduate students at the Georgia Institute of Technology: Deepak Ramalingam and Stephen Buckley.</p>
-    <!-- Continue to Ratings Page Button -->
-    <a href="/ratings">Continue</a>
+    <!-- Write Review Button -->
+    <a href="/rate-movie.html">Review Movie</a>
+    <!-- List of Ratings for Movies -->
+    <div>
+        <!-- Example Movie Rating -->
+        <div>
+            <p>Movie Name 1</p>
+            <p>Review 1</p>
+        </div>
+        <!-- Example Movie Rating -->
+        <div>
+            <p>Movie Name 2</p>
+            <p>Review 2</p>
+        </div>
+        <!-- Example Movie Rating -->
+        <div>
+            <p>Movie Name 3</p>
+            <p>Review 3</p>
+        </div>
+    </div>
 </body>
 
 </html>
