--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <!-- Title of Webpage (appears in tab name) -->
     <title>Spicy Tomatoes</title>
+    <!-- Link CSS Stylesheet -->
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -13,7 +15,7 @@
         <h1>Spicy Tomatoes</h1>
     </div>
     <!-- Write Review Button -->
-    <a href="/rate-movie.html">Review Movie</a>
+    <a href="rate-movie.html">Review Movie</a>
     <!-- List of Ratings for Movies -->
     <div>
         <!-- Example Movie Rating -->
