--- a/rate-movie.html
+++ b/rate-movie.html
@@ -4,6 +4,8 @@
 <head>
     <!-- Title of Webpage (appears in tab name) -->
     <title>Spicy Tomatoes</title>
+    <!-- Link CSS Stylesheet -->
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -19,7 +21,7 @@
         <button>Submit</button>
     </div>
     <!-- Continue to Ratings Page Button -->
-    <a href="/index.html">Back</a>
+    <a href="index.html">Back</a>
 </body>
 
 </html>
