--- a/rate-movie.html
+++ b/rate-movie.html
@@ -6,22 +6,24 @@
     <title>Spicy Tomatoes</title>
     <!-- Link CSS Stylesheet -->
     <link rel="stylesheet" href="index.css">
+    <!-- Fix Scaling of Website on Mobile Devices -->
+    <meta id="Viewport" name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 </head>
 
 <body>
     <!-- Navbar -->
-    <div>
+    <div class="navbarContainer">
         <img width="50px" height="50px" src="https://d35lsekltq0ycz.cloudfront.net/web-arcade/tomato-transparent.png"/>
         <h1>Spicy Tomatoes</h1>
     </div>
     <!-- Form for Typing and Submitting Review -->
-    <div>
+    <div class="reviewFormContainer">
         <input placeholder="movie name" type="text"/>
         <input placeholder="review" type="text"/>
         <button>Submit</button>
     </div>
     <!-- Continue to Ratings Page Button -->
-    <a href="index.html">Back</a>
+    <a href="index.html" class="linkBtn">Back</a>
 </body>
 
 </html>
