Add JS to update and query from db

--- a/index.html
+++ b/index.html
@@ -19,23 +19,9 @@
     <!-- Write Review Button -->
     <a href="rate-movie.html" class="linkBtn">Review Movie</a>
     <!-- List of Ratings for Movies -->
-    <div class="reviewList">
-        <!-- Example Movie Rating -->
-        <div class="reviewContainer">
-            <p class="movieName">Movie Name 1</p>
-            <p class="reviewText">Review 1</p>
-        </div class="reviewContainer">
-        <!-- Example Movie Rating -->
-        <div class="reviewContainer">
-            <p class="movieName">Movie Name 2</p>
-            <p class="reviewText">Review 2</p>
-        </div>
-        <!-- Example Movie Rating -->
-        <div class="reviewContainer">
-            <p class="movieName">Movie Name 3</p>
-            <p class="reviewText">Review 3</p>
-        </div>
-    </div>
+    <div class="reviewList" id="reviewList"></div>
+    <!-- Link JavaScript Code -->
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
