--- a/rate-movie.html
+++ b/rate-movie.html
@@ -18,12 +18,14 @@
     </div>
     <!-- Form for Typing and Submitting Review -->
     <div class="reviewFormContainer">
-        <input placeholder="movie name" type="text"/>
-        <input placeholder="review" type="text"/>
-        <button>Submit</button>
+        <input placeholder="movie name" type="text" id="movieNameInput"/>
+        <input placeholder="review" type="text" id="reviewInput"/>
+        <button id="submitReviewBtn">Submit</button>
     </div>
     <!-- Continue to Ratings Page Button -->
     <a href="index.html" class="linkBtn">Back</a>
+    <!-- Link JavaScript Code -->
+    <script type="module" src="rate-movie.js"></script>
 </body>
 
 </html>
